Changed end UI...  added total Zs to NSUserDefaults {}{}{}{}{}

--- a/Zleep/Zleep/InZleep.storyboard
+++ b/Zleep/Zleep/InZleep.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bench.JPG" translatesAutoresizingMaskIntoConstraints="NO" id="jA3-h5-BBy">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bench" translatesAutoresizingMaskIntoConstraints="NO" id="jA3-h5-BBy">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alarm Set For:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KWz-Cm-p8l">
@@ -85,7 +85,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="bench.JPG" width="2448" height="3264"/>
+        <image name="bench" width="2448" height="3264"/>
         <image name="turtle_96x104.png" width="96" height="104"/>
     </resources>
 </document>
